--- a/video-faded/index.html
+++ b/video-faded/index.html
@@ -19,7 +19,7 @@
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="test">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
@@ -31,7 +31,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1061726554';
+    var serviceWorkerVersion = '429719568';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
