GL Test Common 경로 수정 #4

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ void main() {
 }
 </script>
 
-<script type="text/javascript" src="/Common/webgl-utils.js"></script>
-<script type="text/javascript" src="/Common/initShaders.js"></script>
-<script type="text/javascript" src="/Common/MV.js"></script>
-<script type="text/javascript" src="/perspective.js"></script>
+<script type="text/javascript" src="webgl-utils.js"></script>
+<script type="text/javascript" src="initShaders.js"></script>
+<script type="text/javascript" src="MV.js"></script>
+<script type="text/javascript" src="perspective.js"></script>
 
 <body>
 ID: 201533631 NAME: 김도균 <br>
