GL initShader 경로 수정 #3

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ void main() {
 </script>
 
 <script type="text/javascript" src="webgl-utils.js"></script>
-<script type="text/javascript" src="initShaders.js"></script>
+<script type="text/javascript" src="ishs.js"></script>
 <script type="text/javascript" src="MV.js"></script>
 <script type="text/javascript" src="perspective.js"></script>
 
